fix side-bar menu text getting cutoff

--- a/custom.scss
+++ b/custom.scss
@@ -49,6 +49,11 @@ h1.title, .title.h1 {
     opacity: 0.75;
 }
 
+/*.sidebar-navigation li a {
+    text-decoration: none;
+    position: relative;
+}*/
+
 /*  --bs-nav-tabs-border-width: 2px;
   --bs-nav-tabs-border-color: black;
   --bs-nav-tabs-link-hover-border-color: black;
